--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Web<span class="logo-part">Studio</span></a
           >
           <ul class="nav-list">
-            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link current" href="./index.html">Studio</a></li>
             <li><a class="nav-link" href="./index.html">Portfolio</a></li>
             <li><a class="nav-link" href="./index.html">Contacts</a></li>
           </ul>
