--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           <h2 class="visually-hidden">Webstudio goals</h2>
           <ul class="section-goals-list">
             <li class="section-goals-item">
+              <svg class="section-goals-icon" width="64" height="64">
+                <use
+                  href="./images/iconssectiongoals.svg#icon-antennaicon"
+                ></use>
+              </svg>
               <h3 class="section-goals-subtitle">Strategy</h3>
               <p class="section-goals-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +84,9 @@
               </p>
             </li>
             <li class="section-goals-item">
+              <svg class="section-goals-icon" width="64" height="64">
+                <use href="./images/iconssectiongoals.svg#icon-clockicon"></use>
+              </svg>
               <h3 class="section-goals-subtitle">Punctuality</h3>
               <p class="section-goals-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +94,11 @@
               </p>
             </li>
             <li class="section-goals-item">
+              <svg class="section-goals-icon" width="64" height="64">
+                <use
+                  href="./images/iconssectiongoals.svg#icon-diagramicon"
+                ></use>
+              </svg>
               <h3 class="section-goals-subtitle">Diligence</h3>
               <p class="section-goals-text">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +106,11 @@
               </p>
             </li>
             <li class="section-goals-item">
+              <svg class="section-goals-icon" width="64" height="64">
+                <use
+                  href="./images/iconssectiongoals.svg#icon-astronauticon"
+                ></use>
+              </svg>
               <h3 class="section-goals-subtitle">Technologies</h3>
               <p class="section-goals-text">
                 Design practice focused on digital experiences. We bring forth a
