--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
           <ul class="section-goals-list">
             <li class="section-goals-item">
               <svg class="section-goals-icon" width="64" height="64">
-                <use
-                  href="./images/iconssectiongoals.svg#icon-antennaicon"
-                ></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
               <h3 class="section-goals-subtitle">Strategy</h3>
               <p class="section-goals-text">
@@ -85,7 +83,7 @@
             </li>
             <li class="section-goals-item">
               <svg class="section-goals-icon" width="64" height="64">
-                <use href="./images/iconssectiongoals.svg#icon-clockicon"></use>
+                <use href="./images/icons.svg#icon-clock"></use>
               </svg>
               <h3 class="section-goals-subtitle">Punctuality</h3>
               <p class="section-goals-text">
@@ -95,9 +93,7 @@
             </li>
             <li class="section-goals-item">
               <svg class="section-goals-icon" width="64" height="64">
-                <use
-                  href="./images/iconssectiongoals.svg#icon-diagramicon"
-                ></use>
+                <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
               <h3 class="section-goals-subtitle">Diligence</h3>
               <p class="section-goals-text">
@@ -107,9 +103,7 @@
             </li>
             <li class="section-goals-item">
               <svg class="section-goals-icon" width="64" height="64">
-                <use
-                  href="./images/iconssectiongoals.svg#icon-astronauticon"
-                ></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
               <h3 class="section-goals-subtitle">Technologies</h3>
               <p class="section-goals-text">
