--- a/index.html
+++ b/index.html
@@ -58,18 +58,16 @@
     <!-- Main content -->
     <main>
       <!-- Section hero -->
-      <div class="container hero">
-        <section class="section-hero">
-          <div class="container">
-            <h1 class="section-hero-title">
-              Effective Solutions for Your Business
-            </h1>
-            <button class="section-hero-btn" type="button">
-              Order Service
-            </button>
-          </div>
-        </section>
-      </div>
+
+      <section class="section-hero">
+        <div class="container">
+          <h1 class="section-hero-title">
+            Effective Solutions for Your Business
+          </h1>
+          <button class="section-hero-btn" type="button">Order Service</button>
+        </div>
+      </section>
+
       <!-- Section Webstudio goals hiden -->
       <section class="section-goals">
         <div class="container">
