--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
           <h2 class="visually-hidden">Webstudio goals</h2>
           <ul class="section-goals-list">
             <li class="section-goals-item">
-              <svg class="section-goals-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+              <div class="section-goals-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-goals-subtitle">Strategy</h3>
               <p class="section-goals-text">
                 Our goal is to identify the business problem to walk away with
@@ -84,9 +86,11 @@
               </p>
             </li>
             <li class="section-goals-item">
-              <svg class="section-goals-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="section-goals-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-goals-subtitle">Punctuality</h3>
               <p class="section-goals-text">
                 Bring the key message to the brand's audience for the best price
@@ -94,9 +98,11 @@
               </p>
             </li>
             <li class="section-goals-item">
-              <svg class="section-goals-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="section-goals-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-goals-subtitle">Diligence</h3>
               <p class="section-goals-text">
                 Research and confirm brands that present the strongest digital
@@ -104,9 +110,11 @@
               </p>
             </li>
             <li class="section-goals-item">
-              <svg class="section-goals-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="section-goals-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-goals-subtitle">Technologies</h3>
               <p class="section-goals-text">
                 Design practice focused on digital experiences. We bring forth a
