--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
               <div class="name-post">
                 <h3 class="section-team-subtitle">Mark Guerrero</h3>
                 <p class="section-team-text">Product Designer</p>
+                <ul class="section-team-icon">
+                  <li class="team-icon-instagram">
+                    <a class="team-icon-link" href="./index.html"></a>
+                    <svg class="icon-instagram" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </div>
             </li>
             <li class="section-team-item">
