--- a/index.html
+++ b/index.html
@@ -140,15 +140,34 @@
                 <h3 class="section-team-subtitle">Mark Guerrero</h3>
                 <p class="section-team-text">Product Designer</p>
                 <ul class="section-team-icon">
-                  <li class="team-icon-instagram">
-                    <a class="team-icon-link" href="./index.html"></a>
-                    <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-icon" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-icon" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-icon" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-icon" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -157,6 +176,36 @@
               <div class="name-post">
                 <h3 class="section-team-subtitle">Tom Ford</h3>
                 <p class="section-team-text">Frontend Developer</p>
+                <ul class="section-team-icon">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-team-item">
@@ -168,6 +217,36 @@
               <div class="name-post">
                 <h3 class="section-team-subtitle">Camila Garcia</h3>
                 <p class="section-team-text">Marketing</p>
+                <ul class="section-team-icon">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-team-item">
@@ -179,6 +258,36 @@
               <div class="name-post">
                 <h3 class="section-team-subtitle">Daniel Wilson</h3>
                 <p class="section-team-text">UI Designer</p>
+                <ul class="section-team-icon">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="./index.html">
+                      <svg class="icon-instagram" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
