--- a/index.html
+++ b/index.html
@@ -142,28 +142,28 @@
                 <ul class="section-team-icon">
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-icon" widht="16" height="16">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-icon" widht="16" height="16">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-icon" widht="16" height="16">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-icon" widht="16" height="16">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
