--- a/index.html
+++ b/index.html
@@ -302,12 +302,15 @@
             <li class="portfolio-item">
               <div class="portfolio-img-banking">
                 <img src="./images/img5.jpg" alt="Banking App" width="360" />
-                <p class="portfolio-img-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
+                <div class="portfolio-img-text">
+                  <p class="hiden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
               </div>
+
               <div class="name-app">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
