--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <div class="footer-logo-text">
           <a class="logo-footer" href="./index.html"
             >Web<span class="logo-part-footer">Studio</span></a
