--- a/index.html
+++ b/index.html
@@ -179,28 +179,28 @@
                 <ul class="section-team-icon">
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -220,28 +220,28 @@
                 <ul class="section-team-icon">
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -261,28 +261,28 @@
                 <ul class="section-team-icon">
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="./index.html">
-                      <svg class="icon-instagram" widht="16" height="16">
+                      <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -415,28 +415,28 @@
           <p class="footer-socialmedia">Social media</p>
           <ul class="footer-icons-list">
             <li class="footer-icons-item">
-              <a class="footer-icon-link" href="">
+              <a class="footer-icon-link" href="./index.html">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-item">
-              <a class="footer-icon-link" href="">
+              <a class="footer-icon-link" href="./index.html">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-item">
-              <a class="footer-icon-link" href="">
+              <a class="footer-icon-link" href="./index.html">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-item">
-              <a class="footer-icon-link" href="">
+              <a class="footer-icon-link" href="./index.html">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
